fix: prevent pinned message from overlapping scrollbar and swap to maximize icon when minimized

--- a/assets/chat/css/messages/pinned/_frame.scss
+++ b/assets/chat/css/messages/pinned/_frame.scss
@@ -3,7 +3,8 @@
 #chat-pinned-message {
   display: none;
   position: absolute;
-  width: 100%;
+  left: 4px;
+  right: 20px;
   z-index: 210;
   padding: 4px;
 
